<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_sub_tags">
        <Preference
            android:title="@string/preference_folder_pick"
            android:key="preference_folder"
            android:summary="@string/preference_pick_sub" />
        <EditTextPreference
            android:title="@string/preference_charset"
            android:key="preference_tags_charsets_encoding"
            android:summary="@string/preference_charsets_encoding"
            android:defaultValue="ISO8859_1,MS874,TIS-620"/>
        <MultiSelectListPreference
            android:entries="@array/MetaDataEncodingArray"
            android:title="@string/MetaDataEncoding"
            android:key="MataDataEncoding"
            android:summary="@string/MetaDataEncodingSummary"
            android:entryValues="@array/MetaDataEncodingArrayValues"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_sub_advanced">
        <CheckBoxPreference
            android:key="preference_notification"
            android:summary="Notification on Now Listening song."
            android:title="Enable Notification"
            android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>